1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* io-revoke.c (netfs_S_io_revoke): Use ports_class_iterate.

Mon Feb 22 04:30:18 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-revoke.c (netfs_S_io_revoke): Protect the revocation by
	blocking other rpcs.

Sat Feb 20 20:54:26 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-revoke.c (netfs_S_io_revoke): Release lock before iteration.

1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>

	* io-revoke.c (netfs_S_io_revoke): Fix typos.

Tue Feb 16 05:37:03 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-revoke.c: New file.
	* Makefile (IOSRCS): Add iorevoke.c.

Sun Jan 31 18:27:42 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* file-utimes.c (netfs_S_file_utimes): Understand new semantics
	for setting to current time.
	* netfs.h (netfs_attempt_utimes): Update documentation.

1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* file-set-translator.c: Remove makedev, major, minor macro definition.
	* dir-lookup.c: Likewise.

1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* file-get-fs-options.c (netfs_S_file_get_fs_options):
	fshelp_return_malloced_buffer renamed to iohelp_*.
	* fsys-get-options.c (netfs_S_fsys_get_options): Likewise.

Tue Jul 14 16:30:48 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Don't require the node to be
	a directory in the null pathname case.

1997-09-09  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Fix type signature of
	short_circuited_callback1.

1997-09-05  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Re-aquire the lock on DNP when
	looping to follow a symlink.

1997-08-29  Miles Bader  <miles@gnu.ai.mit.edu>

	* file-reparent.c (netfs_S_file_reparent): Use a copy of
	CRED->user when creating NEW_CRED.

1997-08-28  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Don't lock DNP or assume it's
	locked when it shouldn't be.
